[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/services/main.gd" type="Script" id=1]
[ext_resource path="res://src/menus/static_menus.gd" type="Script" id=2]
[ext_resource path="res://src/menus/custom_map_menu.gd" type="Script" id=3]
[ext_resource path="res://src/menus/embedded_map_menu.gd" type="Script" id=4]
[ext_resource path="res://src/mouse_lock.gd" type="Script" id=5]
[ext_resource path="res://prefabs/services/static_menu_options.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/menus/binds_menu.gd" type="Script" id=7]
[ext_resource path="res://src/ui/mob_debug_ui.gd" type="Script" id=8]

[node name="main" type="Spatial"]
script = ExtResource( 1 )

[node name="mouse_lock" type="Node" parent="."]
script = ExtResource( 5 )

[node name="static_menus" type="CanvasLayer" parent="."]
layer = 10
script = ExtResource( 2 )

[node name="background" type="ColorRect" parent="static_menus"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.67451 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="console" type="LineEdit" parent="static_menus"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -292.0
margin_right = 213.0
margin_bottom = -260.0
placeholder_text = "Type command..."
caret_blink = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="debug" type="Control" parent="static_menus"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="debug_text" type="Label" parent="static_menus/debug"]
margin_right = 512.0
margin_bottom = 600.0
text = "Line 1
Line 2"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="debug_text2" type="Label" parent="static_menus/debug"]
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = 192.0
text = "Line 1
Line 2"
align = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="debug_text3" type="Label" parent="static_menus/debug"]
anchor_top = 0.181
anchor_right = 0.153
anchor_bottom = 0.715
text = "Line 1
Line 2
Line 3
Line 4
Line 5
Line 6
Line 7
Line 8
Line 9
Line 10"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="root_menu" type="Control" parent="static_menus"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="title_text" type="Control" parent="static_menus/root_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -4.0
margin_bottom = -4.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="static_menus/root_menu/title_text"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -300.0
margin_right = 128.0
margin_bottom = -205.0
text = "FAUXOOM"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="credits" type="Label" parent="static_menus/root_menu/title_text"]
anchor_left = 0.5
anchor_right = 0.503
anchor_bottom = 0.21
margin_left = -168.0
margin_top = 240.0
margin_right = 167.0
margin_bottom = 305.0
text = "Game by ZQF
Assets by the Freedoom project: freedoom.github.io
Engine: Godot 3 GLES2
"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="static_menus/root_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -172.0
margin_right = 192.0
margin_bottom = 212.0
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="embedded_maps" type="Button" parent="static_menus/root_menu/VBoxContainer"]
margin_top = 74.0
margin_right = 384.0
margin_bottom = 94.0
text = "START"
__meta__ = {
"_edit_lock_": true
}

[node name="resume" type="Button" parent="static_menus/root_menu/VBoxContainer"]
margin_top = 98.0
margin_right = 384.0
margin_bottom = 118.0
text = "RESUME GAME"
__meta__ = {
"_edit_lock_": true
}

[node name="restart" type="Button" parent="static_menus/root_menu/VBoxContainer"]
margin_top = 122.0
margin_right = 384.0
margin_bottom = 142.0
text = "RESTART LEVEL"
__meta__ = {
"_edit_lock_": true
}

[node name="load_checkpoint" type="Button" parent="static_menus/root_menu/VBoxContainer"]
margin_top = 146.0
margin_right = 384.0
margin_bottom = 166.0
text = "LOAD CHECKPOINT"
__meta__ = {
"_edit_lock_": true
}

[node name="return_to_title" type="Button" parent="static_menus/root_menu/VBoxContainer"]
margin_top = 170.0
margin_right = 384.0
margin_bottom = 190.0
text = "RETURN TO TITLE"
__meta__ = {
"_edit_lock_": true
}

[node name="custom_maps" type="Button" parent="static_menus/root_menu/VBoxContainer"]
margin_top = 194.0
margin_right = 384.0
margin_bottom = 214.0
disabled = true
text = "CUSTOM MAPS"
__meta__ = {
"_edit_lock_": true
}

[node name="edit_entities" type="Button" parent="static_menus/root_menu/VBoxContainer"]
margin_top = 218.0
margin_right = 384.0
margin_bottom = 238.0
text = "EDIT ENTITIES"
__meta__ = {
"_edit_lock_": true
}

[node name="options" type="Button" parent="static_menus/root_menu/VBoxContainer"]
margin_top = 242.0
margin_right = 384.0
margin_bottom = 262.0
text = "OPTIONS"
__meta__ = {
"_edit_lock_": true
}

[node name="binds" type="Button" parent="static_menus/root_menu/VBoxContainer"]
margin_top = 266.0
margin_right = 384.0
margin_bottom = 286.0
text = "BINDS"
__meta__ = {
"_edit_lock_": true
}

[node name="quit" type="Button" parent="static_menus/root_menu/VBoxContainer"]
margin_top = 290.0
margin_right = 384.0
margin_bottom = 310.0
text = "QUIT"
__meta__ = {
"_edit_lock_": true
}

[node name="embedded_maps" type="Control" parent="static_menus"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="static_menus/embedded_maps"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -172.0
margin_right = 192.0
margin_bottom = 212.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_title" type="Label" parent="static_menus/embedded_maps/VBoxContainer"]
margin_right = 384.0
margin_bottom = 14.0
text = "SELECT MAP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test_arenas" type="Button" parent="static_menus/embedded_maps/VBoxContainer"]
margin_top = 18.0
margin_right = 384.0
margin_bottom = 38.0
text = "Arenas"

[node name="test_gameplay" type="Button" parent="static_menus/embedded_maps/VBoxContainer"]
margin_top = 42.0
margin_right = 384.0
margin_bottom = 62.0
text = "Run N Gun Test"

[node name="test_entities" type="Button" parent="static_menus/embedded_maps/VBoxContainer"]
margin_top = 66.0
margin_right = 384.0
margin_bottom = 86.0
text = "Entity testbed"

[node name="back" type="Button" parent="static_menus/embedded_maps/VBoxContainer"]
margin_top = 90.0
margin_right = 384.0
margin_bottom = 110.0
text = "Back"

[node name="custom_map_menu" type="Control" parent="static_menus"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="load_from_text" type="VBoxContainer" parent="static_menus/custom_map_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -496.0
margin_top = -236.0
margin_right = -65.0
margin_bottom = 140.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="static_menus/custom_map_menu/load_from_text"]
margin_right = 431.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "Load map text"
__meta__ = {
"_edit_lock_": true
}

[node name="paste_box" type="TextEdit" parent="static_menus/custom_map_menu/load_from_text"]
margin_top = 36.0
margin_right = 431.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 96 )
hint_tooltip = "Paste map text here to load from"
wrap_enabled = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="copy_button" type="Button" parent="static_menus/custom_map_menu/load_from_text"]
margin_top = 136.0
margin_right = 431.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 24 )
text = "COPY TEXT FROM SAVE"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="to_clipboard" type="Button" parent="static_menus/custom_map_menu/load_from_text"]
margin_top = 164.0
margin_right = 431.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 24 )
text = "COPY TO CLIPBOARD"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="to_data" type="Button" parent="static_menus/custom_map_menu/load_from_text"]
margin_top = 192.0
margin_right = 431.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 24 )
text = "TO DATA"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="load_button" type="Button" parent="static_menus/custom_map_menu/load_from_text"]
margin_top = 220.0
margin_right = 431.0
margin_bottom = 244.0
rect_min_size = Vector2( 0, 24 )
text = "LOAD"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="edit_button" type="Button" parent="static_menus/custom_map_menu/load_from_text"]
margin_top = 248.0
margin_right = 431.0
margin_bottom = 272.0
rect_min_size = Vector2( 0, 24 )
disabled = true
text = "EDIT"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="play_button" type="Button" parent="static_menus/custom_map_menu/load_from_text"]
margin_top = 276.0
margin_right = 431.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 24 )
disabled = true
text = "PLAY"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="load_results" type="RichTextLabel" parent="static_menus/custom_map_menu/load_from_text"]
margin_top = 304.0
margin_right = 431.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 96 )
focus_mode = 2
selection_enabled = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="save_to_text" type="VBoxContainer" parent="static_menus/custom_map_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 64.0001
margin_top = -236.0
margin_right = 494.999
margin_bottom = 42.0002
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="static_menus/custom_map_menu/save_to_text"]
margin_right = 430.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "Save current map to text"
__meta__ = {
"_edit_lock_": true
}

[node name="paste_box" type="TextEdit" parent="static_menus/custom_map_menu/save_to_text"]
margin_top = 36.0
margin_right = 430.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 96 )
hint_tooltip = "Copy map text from here to save"
wrap_enabled = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="save_button" type="Button" parent="static_menus/custom_map_menu/save_to_text"]
margin_top = 136.0
margin_right = 430.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 24 )
text = "SAVE"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="save_results" type="RichTextLabel" parent="static_menus/custom_map_menu/save_to_text"]
margin_top = 164.0
margin_right = 430.0
margin_bottom = 196.0
rect_min_size = Vector2( 0, 32 )
focus_mode = 2
mouse_filter = 2
text = "Current map text"
selection_enabled = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="new_map" type="VBoxContainer" parent="static_menus/custom_map_menu"]
margin_left = 384.0
margin_top = 384.0
margin_right = 640.0
margin_bottom = 512.0
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="set_width" type="HBoxContainer" parent="static_menus/custom_map_menu/new_map"]
margin_top = 18.0
margin_right = 256.0
margin_bottom = 34.0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="static_menus/custom_map_menu/new_map/set_width"]
margin_left = 7.0
margin_top = 1.0
margin_right = 52.0
margin_bottom = 15.0
text = "WIDTH"
__meta__ = {
"_edit_lock_": true
}

[node name="width_slider" type="HSlider" parent="static_menus/custom_map_menu/new_map/set_width"]
margin_left = 56.0
margin_right = 248.0
margin_bottom = 16.0
rect_min_size = Vector2( 192, 0 )
min_value = 16.0
max_value = 96.0
step = 2.0
value = 32.0
__meta__ = {
"_edit_lock_": true
}

[node name="set_height" type="HBoxContainer" parent="static_menus/custom_map_menu/new_map"]
margin_top = 38.0
margin_right = 256.0
margin_bottom = 54.0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="static_menus/custom_map_menu/new_map/set_height"]
margin_left = 5.0
margin_top = 1.0
margin_right = 54.0
margin_bottom = 15.0
text = "HEIGHT"
__meta__ = {
"_edit_lock_": true
}

[node name="height_slider" type="HSlider" parent="static_menus/custom_map_menu/new_map/set_height"]
margin_left = 58.0
margin_right = 250.0
margin_bottom = 16.0
rect_min_size = Vector2( 192, 0 )
min_value = 16.0
max_value = 96.0
step = 2.0
value = 32.0
__meta__ = {
"_edit_lock_": true
}

[node name="create_new" type="Button" parent="static_menus/custom_map_menu/new_map"]
margin_top = 58.0
margin_right = 256.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 24 )
text = "CREATE NEW"
__meta__ = {
"_edit_lock_": true
}

[node name="back" type="Button" parent="static_menus/custom_map_menu/new_map"]
margin_top = 86.0
margin_right = 256.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 24 )
text = "BACK"
__meta__ = {
"_edit_lock_": true
}

[node name="FileDialog" type="FileDialog" parent="static_menus/custom_map_menu"]
margin_right = 315.0
margin_bottom = 130.0
resizable = true

[node name="options" parent="static_menus" instance=ExtResource( 6 )]
visible = false

[node name="binds" type="Control" parent="static_menus"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="static_menus/binds"]
margin_left = 192.0
margin_top = 120.0
margin_right = 832.0
margin_bottom = 392.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="static_menus/binds/VBoxContainer"]
margin_top = 117.0
margin_right = 640.0
margin_bottom = 131.0
text = "Keybinds"
align = 1

[node name="back" type="Button" parent="static_menus/binds/VBoxContainer"]
margin_top = 135.0
margin_right = 640.0
margin_bottom = 155.0
text = "BACK"

[node name="rebinding_popup" type="ColorRect" parent="static_menus/binds"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="static_menus/binds/rebinding_popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_right = 128.0
margin_bottom = 32.0
text = "Rebinding info"
align = 1
valign = 1
